discount and linkedactivites

--- a/src/lang/locales/en_US.json
+++ b/src/lang/locales/en_US.json
@@ -12,6 +12,8 @@
 	"sidenav.vendor-meals": "Vendor Meals",
 	"sidenav.vendor-transports": "Vendor Transports",
 	"sidenav.vendor-amenities": "Vendor Amenities",
+	"sidenav.discounts": "Discounts",
+	"sidenav.linked-activities": "Linked Activities",
 
 
 	"sidenav.apps": "Apps",
